syntax = "proto3";

package imgtengwar;

import "google/api/httpbody.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/duration.proto";
import "google/api/annotations.proto";
// import "google/protobuf/empty.proto";

option go_package = "github.com/amdf/imgtengwar/svc";

message SimpleConvertRequest {
    string input_text = 1;
}

message ConvertRequest {  
    string input_text = 1;
    int32 font_size = 2;
    string font_file = 3;
    enum FontStyles {
        NORMAL = 0;
        ITALIC = 1;
    }
    FontStyles font_style = 4;    
}

message ConvertResponse {    
    string converted_text = 1;
}

service TengwarConverter {
    rpc ConvertText(SimpleConvertRequest) returns (ConvertResponse) {
        option (google.api.http) = {
            post: "/v1/converttext"
            body: "*"
            };
    };    

    rpc MakeImage(ConvertRequest) returns (google.api.HttpBody) {
		option (google.api.http) = {
			get: "/v1/makeimage"
		};
	}
};
